230441100052-UbayDillah-Kak Devi-Modul 1

--- a/Modul 1/230441100052-UbayDillah/index.html
+++ b/Modul 1/230441100052-UbayDillah/index.html
@@ -1,9 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Belajar Github</title>
+    <title>Tugas Praktikum Modul 1</title>
   </head>
-  <body></body>
+  <body>
+    <h2 align="center">Membuat Halaman Biodata diri</h2>
+    <table border="0" cellpadding="10" cellspacing="0" align="center">
+      <tr>
+        <th align="right">Nama :</th>
+        <td>Ubay Dillah</td>
+      </tr>
+      <tr>
+        <th align="right">Alamat :</th>
+        <td>Jakarta Utara, DKI Jakarta</td>
+      </tr>
+      <tr>
+        <th align="right">Tanggal Lahir :</th>
+        <td>13 Agustus 2005</td>
+      </tr>
+      <tr>
+        <th align="right">Pendidikan :</th>
+        <td>SMA</td>
+      </tr>
+      <tr>
+        <th align="right">Hobi :</th>
+        <td>Bermain Voli</td>
+      </tr>
+      <tr>
+        <td colspan="2" align="center">
+          <a href="index2.html">== Next ==</a>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
