230441100052_UbayDillah_Modul 2_Kak Agastia Devi Wardani

--- a/Modul 2/230441100052-UbayDillah/index.html
+++ b/Modul 2/230441100052-UbayDillah/index.html
@@ -3,128 +3,114 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kenzie-Coklat</title>
+    <title>Milo Cheese Rolls</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Milo Cheese Rolls</title>
-        <link rel="stylesheet" href="style.css" />
-      </head>
+    <nav>
+      <div class="logo">
+        <img src="img/logo.png" alt="Logo" />
+        <a href="#order">Mau Pesan?</a>
+      </div>
+      <ul>
+        <li><a href="#home">home</a></li>
+        <li><a href="#about">tentang</a></li>
+        <li><a href="#product">produk</a></li>
+      </ul>
+    </nav>
+    <div id="home">.</div>
+    <header>
+      <div class="title">
+        <h1 class="atas">Selamat Datang</h1>
+        <h1 class="bawah">Di Kenzy Coklat</h1>
+        <div class="slogan">
+          <p>Tuntaskan Hasrat <span>Manismu!</span></p>
+        </div>
+        <a href="#order">Mau Pesan?</a>
+      </div>
+      <div class="gambar">
+        <img src="img/logo.png" alt="logo" class="logo" />
+      </div>
+    </header>
+    <div id="about"></div>
+    <main>
+      <section class="about">
+        <h2>Milo Cheese <span>Rolls</span></h2>
+        <div class="paragraph">
+          <p>
+            Milo Cheese Roll, tempatnya mencicipi kelezatan manis yang menggoda.
+            Kami menghadirkan kreasi unik dengan perpaduan sempurna antara rasa
+            milo dan kelembutan keju dalam setiap gigitannya.
+          </p>
+          <div class="image-paragraph">
+            <img src="img/milo.png" alt="Milo Cheese Roll" />
+          </div>
+        </div>
+      </section>
+      <div id="product">.</div>
+      <section class="product">
+        <h2>Produk <span>Kami</span></h2>
+        <div class="card-container">
+          <div class="card">
+            <img src="img/Foto Tiramisu.png" />
+            <div class="content-card">
+              <p class="bold">-Tiramisu-</p>
+              <p><span class="thin">IDR 15K</span></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="img/Foto Choco Crunchy.png" />
+            <div class="content-card">
+              <p class="bold">-Choco Chrunchy-</p>
+              <p><span class="thin">IDR 15K</span></p>
+            </div>
+          </div>
 
-      <body>
-        <nav>
-          <div class="logo">
-            <img src="img/logo.png" alt="Logo" />
-            <a href="#order">Mau Pesan?</a>
-          </div>
-          <ul>
-            <li><a href="#home">home</a></li>
-            <li><a href="#about">tentang</a></li>
-            <li><a href="#product">produk</a></li>
-          </ul>
-        </nav>
-        <div id="home">.</div>
-        <header>
-          <div class="title">
-            <h1 class="atas">Selamat Datang</h1>
-            <h1 class="bawah">Di Kenzy Coklat</h1>
-            <div class="slogan">
-              <p>Tuntaskan Hasrat <span>Manismu!</span></p>
-            </div>
-            <a href="#order">Mau Pesan?</a>
-          </div>
-          <div class="gambar">
-            <img src="img/logo.png" alt="logo" class="logo" />
-          </div>
-        </header>
-        <div id="about"></div>
-        <main>
-          <section class="about">
-            <h2>Milo Cheese <span>Rolls</span></h2>
-            <div class="paragraph">
-              <p>
-                Milo Cheese Roll, tempatnya mencicipi kelezatan manis yang
-                menggoda. Kami menghadirkan kreasi unik dengan perpaduan
-                sempurna antara rasa milo dan kelembutan keju dalam setiap
-                gigitannya.
-              </p>
-              <div class="image-paragraph">
-                <img src="img/milo.png" alt="Milo Cheese Roll" />
-              </div>
-            </div>
-          </section>
-          <div id="product">.</div>
-          <section class="product">
-            <h2>Produk <span>Kami</span></h2>
-            <div class="card-container">
-              <div class="card">
-                <img src="img/Foto Tiramisu.png" />
-                <div class="content-card">
-                  <p class="bold">-Tiramisu-</p>
-                  <p><span class="thin">IDR 15K</span></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/Foto Choco Crunchy.png" />
-                <div class="content-card">
-                  <p class="bold">-Choco Chrunchy-</p>
-                  <p><span class="thin">IDR 15K</span></p>
-                </div>
-              </div>
-
-              <div class="card">
-                <img src="img/Foto Taro.png" />
-                <div class="content-card">
-                  <p class="bold">-Taro-</p>
-                  <p><span class="thin">IDR 15K</span></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/minum1.jpg" />
-                <div class="content-card">
-                  <p class="bold">-Choco Drink-</p>
-                  <p><span class="thin">IDR 10K</span></p>
-                </div>
-              </div>
-              <div class="card">
-                <img src="img/matcha.jpg" />
-                <div class="content-card">
-                  <p class="bold">-Matcha-</p>
-                  <p><span class="thin">IDR 10K</span></p>
-                </div>
-              </div>
-            </div>
-          </section>
-          <div class="push">
-            <button id="order">Pesan Sekarang</button>
-          </div>
-        </main>
-        <footer>
-          <div class="footer">
-            <div class="license">
-              <p class="bold">Kenzy</p>
-              <p>Hak Cipta &copy; 2023 All rights reserved.</p>
-            </div>
-            <div class="contact-info">
-              <p class="bold">Contact Us</p>
-              <a href="tel:+628123456789"
-                >Nomor Telepon: +62 812-8737-3318 ( WA Only)</a
-              >
-              <a href="https://www.instagram.com/kenzycoklat/"
-                >Instagram: @kenzycoklat</a
-              >
+          <div class="card">
+            <img src="img/Foto Taro.png" />
+            <div class="content-card">
+              <p class="bold">-Taro-</p>
+              <p><span class="thin">IDR 15K</span></p>
             </div>
           </div>
-        </footer>
-      </body>
-
-      <script src="script.js"></script>
-    </html>
+          <div class="card">
+            <img src="img/minum1.jpg" />
+            <div class="content-card">
+              <p class="bold">-Choco Drink-</p>
+              <p><span class="thin">IDR 10K</span></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="img/matcha.jpg" />
+            <div class="content-card">
+              <p class="bold">-Matcha-</p>
+              <p><span class="thin">IDR 10K</span></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="push">
+        <button id="order">Pesan Sekarang</button>
+      </div>
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="license">
+          <p class="bold">Kenzy</p>
+          <p>Hak Cipta &copy; 2023 All rights reserved.</p>
+        </div>
+        <div class="contact-info">
+          <p class="bold">Contact Us</p>
+          <a href="tel:+628123456789"
+            >Nomor Telepon: +62 812-8737-3318 ( WA Only)</a
+          >
+          <a href="https://www.instagram.com/kenzycoklat/"
+            >Instagram: @kenzycoklat</a
+          >
+        </div>
+      </div>
+    </footer>
+    <script src="script.js"></script>
   </body>
 </html>
